--- a/css/site.css
+++ b/css/site.css
@@ -194,4 +194,33 @@ app {
     .connection {
         min-width: 250px;
     }
+
+    .json-box {
+        position: -webkit-sticky; /* Safari */
+        position: sticky;
+        top: 100px;
+    }
+
+    .pin {
+        position: -webkit-sticky; /* Safari */
+        position: sticky;
+    }
+
+    .event-list-item {
+    }
+
+    event-list {
+    }
+
+    ul.event-list li:hover {
+        background-color: #f8f9fa;
+    }
+
+    ul.event-list li:active {
+        background-color: #e9ecef;
+    }
+
+    ul.event-list li.selected {
+        background-color: #e9ecef;
+    }
 }
